# django-taggit

./: .gitignore  MANIFEST.in  setup.cfg  setup.py
taggit/: __init__.py  admin.py  forms.py  managers.py  models.py  urls.py  views.py
taggit/migrations/: 0003_auto__add_field_tag_ad_alias__chg_field_tagtransform_transform.py
taggit/static/taggit/js/: taggit.js
