[egg_info]
tag_build = +atl.3.0.0
tag_date = false

[metadata]
license-file = LICENSE

[wheel]
universal=1

[flake8]
# ignore=NONE
# max-line-length=100

# E302: expected 2 blank lines, found 1 [E302]
# E501: line too long
ignore=E501,E302
exclude = south_migrations,migrations

[isort]
forced_separate=tests,taggit
